# npc-engine

./: CMakeLists.txt  LICENSE  README.md  index.html  npc_wasm.js  npc_wasm.wasm
.github/workflows/: ci.yml
examples/: village_sim.cpp
include/npc/: npc.hpp
include/npc/ai/: goap.hpp
include/npc/combat/: combat_system.hpp
include/npc/emotion/: emotion_system.hpp
include/npc/event/: event_system.hpp
include/npc/memory/: memory_system.hpp
include/npc/navigation/: pathfinding.hpp  steering.hpp
include/npc/perception/: perception_system.hpp
include/npc/personality/: personality_traits.hpp
include/npc/serialization/: npc_serializer.hpp
include/npc/skill/: skill_system.hpp
include/npc/social/: faction_system.hpp  group_behavior.hpp
include/npc/threading/: thread_safety.hpp
include/npc/trade/: trade_system.hpp
include/npc/world/: weather_system.hpp
src/: npc.cpp
tests/: run_tests.cpp
